Adding field name field with pattern matching

--- a/web/builder.html
+++ b/web/builder.html
@@ -95,6 +95,12 @@
               <label for="${id}-label">Field Label</label>
             </div>
           </div>
+          <div class="col-lg-6">
+            <div class="form-floating">
+              <input type="text" id="${id}-label" class="form-control" name="label[${id}]" value="" placeholder="Field Name" pattern="[a-z0-9_]+" title="Must be lowercase alphanumeric; underscores allowed" required>
+              <label for="${id}-label">Field Name</label>
+            </div>
+          </div>
         </div>
       </template>
     </div>
