--- a/web/builder.html
+++ b/web/builder.html
@@ -149,6 +149,28 @@
           </div>
         </div>
       </template>
+      <template id="number-template">
+        <div class="row g-3">
+          <div class="col-lg-3">
+            <div class="form-floating">
+              <input type="number" id="${id}-min" class="form-control mb-3" name="min[${id}]" placeholder="Min Number" value="">
+              <label for="${id}-min">Min Number</label>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div class="form-floating">
+              <input type="number" id="${id}-max" class="form-control mb-3" name="max[${id}]" placeholder="Max Number" value="">
+              <label for="${id}-max">Max Number</label>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div class="form-floating">
+              <input type="number" id="${id}-step" class="form-control mb-3" name="step[${id}]" min="0" placeholder="Step" value="">
+              <label for="${id}-step">Step</label>
+            </div>
+          </div>
+        </div>
+      </template>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
