--- a/web/builder.html
+++ b/web/builder.html
@@ -171,6 +171,16 @@
           </div>
         </div>
       </template>
+      <template id="select-template">
+        <div class="row g-3">
+          <div class="col-lg-12">
+            <div class="form-floating">
+              <textarea id="${id}-options" class="form-control mb-3" name="options[${id}]" placeholder="Options (one per line, key | value or just value)" style="height: 10em;"></textarea>
+              <label for="${id}-options">Options (one per line, key | value or just value)</label>
+            </div>
+          </div>
+        </div>
+      </template>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
